--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,11 @@ services:
       - "8501:8501"
     volumes:
       - "./:/app/"
+    command:
+      [
+        "streamlit",
+        "run",
+        "app.py",
+        "--server.enableCORS=false",
+        "--server.enableWebsocketCompression=false"
+      ]
