--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit==1.11.0
+streamlit==1.26.0
 openai==0.27.8
 litellm==0.1.559
 requests==2.31.0
 cssutils==2.7.1
 beautifulsoup4==4.12.2
 tiktoken==0.4.0
+trafilatura==1.6.1
